...
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AyI-cC-rBF">
                                        <rect key="frame" x="0.0" y="0.0" width="125" height="127"/>
                                        <constraints>
                                            <constraint firstAttribute="height" secondItem="AyI-cC-rBF" secondAttribute="width" multiplier="125:123" id="EX5-6H-wgK"/>
                                        </constraints>
                                        <state key="normal" image="dislikeBtn"/>
                                        <connections>
                                            <action selector="dislikeButtonTapped:" destination="hFd-zN-FYK" eventType="touchUpInside" id="WdS-bx-X3z"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q8y-40-czr">
                                        <rect key="frame" x="175" y="0.0" width="125" height="127"/>
...
