...
    countdownLabel.textAlignment = .center
    countdownLabel.font = UIFont(name: "ChalkboardSE-Regular", size: 20)
    
    countdownTimer.translatesAutoresizingMaskIntoConstraints = false
    countdownTimer.textAlignment = .center
    countdownTimer.font = UIFont(name: "ChalkboardSE-Regular", size: 20)
    countdownTimer.accessibilityIdentifier = "00:00:01"
    countdownTimer.setCountdownTimerText()
    
    timer = Timer.scheduledTimer(timeInterval: 1.0, target: self, selector: #selector(startCountdown), userInfo: nil, repeats: true)
    
    let suggestionLabel = UILabel()
    suggestionLabel.translatesAutoresizingMaskIntoConstraints = false
...
